<resources>
    <string name="app_name">PhotoEditor</string>
    <string name="b_w">Ч/Б</string>
    <string name="red">красный</string>
    <string name="neg">негатив</string>
    <string name="sepia">сепия</string>
    <string name="bw">Ч/Б</string>
    <string name="rb">RB</string>
    <string name="original">оригинал</string>
    <string name="apply">Применить</string>
    <string name="back">Назад</string>
    <string name="photo_editor">Photo Editor</string>
    <string name="select_image">Выбрать фото</string>
    <string name="take_photo">Камера</string>
    <string name="radius">radius</string>
    <string name="amount">amount</string>
    <string name="threshold">threshold</string>
    <string name="change">Изменить</string>
    <string name="appID">photoEditor</string>
    <string name="selectImage">Select Image</string>
    <string name="imageUri">imgUri</string>
    <string name="onDeny">Редактор не может работать без доступа к Вашим фото. Пожалуйста, выберите "Разрешить"</string>
    <string name="error1">Не поддерживается на Вашем устройстве</string>
    <string name="saveQuest">Сохранить фото в галерею?</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="share">Отправить с помощью:</string>
    <string name="noApps">Нет приложений, подходящих для отправки</string>
    <string name="img">imageUri</string>
    <string name="saved">Сохранено</string>
    <string name="zaxic">Поворот по оси Z</string>
    <string name="rotate">rotate</string>
    <string name="scaling">scaling</string>
    <string name="eff">эффект</string>
    <string name="rad">радиус</string>
    <string name="por">порог</string>
    <string name="changeCoef">Введите коэффициент</string>
    <string name="_180">-180°</string>
    <string name="_90">-90°</string>
    <string name="rotate90">+90°</string>
    <string name="rotate180">+180°</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_7">7</string>
    <string name="_9">9</string>
    <string name="_4">4</string>
    <string name="mirror">отразить</string>
    <string name="rot">Повернуть</string>
    <string name="angle">Введите угол поворота</string>


</resources>