<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rootLayout"
    style="@style/LayoutsMainStyle">

    <LinearLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:id="@+id/editScreen"
        android:orientation="vertical">

        <LinearLayout style="@style/LayoutsStyle">

            <Button
                android:id="@+id/backButton"
                style="@style/MyButtonsStyle"
                android:layout_weight="0.35"
                android:text="@string/back" />

            <ImageButton
                android:id="@+id/returnBackButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:src="@android:drawable/ic_menu_revert" />

            <Button
                android:id="@+id/applyButton"
                style="@style/MyButtonsStyle"
                android:layout_weight="0.35"
                android:text="@string/apply" />
        </LinearLayout>

        <ImageView
            android:id="@+id/imageViewEdit"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/changeButton"
                style="@style/MyButtonsStyle"
                android:layout_gravity="center"
                android:text="@string/change" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
            <EditText
                android:id="@+id/amountEditText"
                style="@style/EditTextStyle"
                android:hint="@string/eff" />

            <EditText
                android:id="@+id/radiusEditText"
                style="@style/EditTextStyle"
                android:hint="@string/rad" />

            <EditText
                android:id="@+id/thresholdEditText"
                style="@style/EditTextStyle"
                android:hint="@string/por" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>