<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RotateActivity">

    <LinearLayout
        android:id="@+id/rotationScreen"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="visible">

        <LinearLayout style="@style/LayoutsStyle">

            <Button
                android:id="@+id/backButton"
                style="@style/MyButtonsStyle"
                android:layout_weight="0.3"
                android:text="@string/back" />

            <ImageButton
                android:id="@+id/returnBackButton"
                style="@style/ImageReturnButtonStyle"
                android:backgroundTint="@color/white"
                android:src="@android:drawable/ic_menu_revert" />

            <ImageButton
                android:id="@+id/returnButton"
                style="@style/ImageReturnButtonStyle"
                android:rotation="180"
                android:src="@android:drawable/ic_menu_revert" />

            <Button
                android:id="@+id/applyButton"
                style="@style/MyButtonsStyle"
                android:layout_weight="0.2"
                android:text="@string/apply" />
        </LinearLayout>

        <ImageView
            android:id="@+id/imageViewEdit"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!--            <Button-->
            <!--                android:id="@+id/doubleRight"-->
            <!--                style="@style/MyButtonsStyle"-->
            <!--                android:layout_weight="1"-->
            <!--                android:text="@string/_180" />-->

            <!--            <Button-->
            <!--                android:id="@+id/right"-->
            <!--                style="@style/MyButtonsStyle"-->
            <!--                android:layout_weight="1"-->
            <!--                android:text="@string/_90" />-->

            <!--            <Button-->
            <!--                android:id="@+id/left"-->
            <!--                style="@style/MyButtonsStyle"-->
            <!--                android:layout_weight="1"-->
            <!--                android:text="@string/rotate90" />-->

            <!--            <Button-->
            <!--                android:id="@+id/doubleLeft"-->
            <!--                style="@style/MyButtonsStyle"-->
            <!--                android:layout_weight="1"-->
            <!--                android:text="@string/rotate180" />-->
            <Button
                android:id="@+id/changeButton"
                style="@style/MyButtonsStyle"
                android:layout_weight="1"
                android:text="@string/rot" />

            <Button
                android:id="@+id/mirrorButton"
                style="@style/MyButtonsStyle"
                android:layout_weight="1"
                android:text="@string/mirror" />

        </LinearLayout>

        <EditText
            android:id="@+id/angleRotationEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:hint="@string/angle" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>