<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/editScreen"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="visible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <ImageButton
                android:id="@+id/backButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="6"
                android:background="@color/white"
                android:src="?attr/homeAsUpIndicator"
                android:tint="@color/black" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="20" />

            <ImageButton
                android:id="@+id/share"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="6"
                android:backgroundTint="@color/white"
                android:src="?attr/actionModeShareDrawable"
                android:tint="@color/black" />

            <ImageButton
                android:id="@+id/saveButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="6"
                android:backgroundTint="@color/white"
                android:src="@android:drawable/stat_sys_download_done"
                android:tint="@color/black" />
        </LinearLayout>

        <ImageView
            android:id="@+id/imageViewEdit"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <ScrollView
            android:id="@+id/scroll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <HorizontalScrollView
                android:id="@+id/hscroll"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="50dp">

                    <Button
                        android:id="@+id/rotationButton"
                        style="@style/ButtonsChooseStyle"
                        android:text="@string/_1" />

                    <Button
                        android:id="@+id/colorFiltersButton"
                        style="@style/ButtonsChooseStyle"
                        android:text="@string/_2" />

                    <Button
                        android:id="@+id/scalingButton"
                        style="@style/ButtonsChooseStyle"
                        android:text="@string/_3" />

<!--                    <Button-->
<!--                        android:id="@+id/faceDetectButton"-->
<!--                        style="@style/ButtonsChooseStyle"-->
<!--                        android:text="@string/_4" />-->

<!--                    <Button-->
<!--                        android:id="@+id/splineButton"-->
<!--                        style="@style/ButtonsChooseStyle"-->
<!--                        android:text="5" />-->
<!--                    <Button-->
<!--                        android:id="@+id/retouchButton"-->
<!--                        style="@style/ButtonsChooseStyle"-->
<!--                        android:text="6" />-->
                    <Button
                        android:id="@+id/maskingButton"
                        style="@style/ButtonsChooseStyle"
                        android:text="@string/_7" />
                    <Button
                        android:id="@+id/cubeButton"
                        style="@style/ButtonsChooseStyle"
                        android:text="@string/_9" />


                </LinearLayout>
            </HorizontalScrollView>
        </ScrollView>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>