<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rootLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/editScreen"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="visible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="fill_horizontal"
            android:orientation="horizontal"
            android:paddingLeft="0dp"
            android:paddingRight="0dp">


            <Button
                android:id="@+id/backButton"
                style="@style/MyButtonsStyle"
                android:layout_weight="0.3"
                android:text="@string/back" />

            <ImageButton
                android:id="@+id/returnBackButton"
                style="@style/ImageReturnButtonStyle"
                android:backgroundTint="@color/white"
                android:src="@android:drawable/ic_menu_revert" />

            <ImageButton
                android:id="@+id/returnButton"
                style="@style/ImageReturnButtonStyle"
                android:rotation="180"
                android:src="@android:drawable/ic_menu_revert" />

            <Button
                android:id="@+id/applyButton"
                style="@style/MyButtonsStyle"
                android:layout_weight="0.2"
                android:text="@string/apply" />
        </LinearLayout>

        <ImageView
            android:id="@+id/imageViewEdit"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <ScrollView
            android:id="@+id/scroll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <HorizontalScrollView
                android:id="@+id/hscroll"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:orientation="vertical">

                        <ImageButton
                            android:id="@+id/original"
                            style="@style/ImageButtonStyle"
                            android:src="@drawable/orige" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="0.2"
                            android:gravity="center"
                            android:text="@string/original" />
                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:orientation="vertical">

                        <ImageButton
                            android:id="@+id/swap"
                            style="@style/ImageButtonStyle"
                            android:src="@drawable/swape" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="0.2"
                            android:gravity="center"
                            android:text="@string/rb" />
                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:orientation="vertical">

                        <ImageButton
                            android:id="@+id/grey"
                            style="@style/ImageButtonStyle"
                            android:src="@drawable/greye" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="0.2"
                            android:gravity="center"
                            android:text="@string/bw" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:orientation="vertical">

                        <ImageButton
                            android:id="@+id/sepia"
                            style="@style/ImageButtonStyle"
                            android:src="@drawable/sepe" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="0.2"
                            android:gravity="center"
                            android:text="@string/sepia" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:orientation="vertical">

                        <ImageButton
                            android:id="@+id/negative"
                            style="@style/ImageButtonStyle"
                            android:src="@drawable/negativee" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="0.2"
                            android:gravity="center"
                            android:text="@string/neg" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:orientation="vertical">

                        <ImageButton
                            android:id="@+id/red"
                            style="@style/ImageButtonStyle"
                            android:src="@drawable/rede" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="0.2"
                            android:gravity="center"
                            android:text="@string/red" />
                    </LinearLayout>
                </LinearLayout>
            </HorizontalScrollView>
        </ScrollView>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>